# kubernetes-webhook-haskell

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ci.nix  default.nix  kubernetes-webhook-haskell.cabal  shell.nix
.github/workflows/: ci.yaml
dhall/: Config.dhall  mutatingWebhookTemplate.dhall  validatingWebhookTemplate.dhall
nix/: sources.json
nixpkgs/: default.nix
src/Kubernetes/: Webhook.hs
src/Kubernetes/Webhook/: Types.hs
