name:                kubernetes-webhook-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kubernetes-webhook-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Alessandro Marrella
maintainer:          amarrella@earnestresearch.com
copyright:           2020 Alessandro Marrella
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kubernetes.Webhook, Kubernetes.Webhook.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , binary
                     , bytestring
                     , text
                     , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EarnestResearch/kubernetes-webhook-haskell
